--- a/index.html
+++ b/index.html
@@ -3,8 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <title>People Selling Mirrors</title>
+    <style type="text/css" media="screen">
+        *,
+        *:before,
+        *:after {
+          box-sizing: border-box;
+        }
+        .wrapper {
+            margin: 0 auto;
+            max-width: 940px;
+        }
+        h1{
+            font-size:1.6em;
+            font-weight:normal;
+        }
+        main{
+            display: grid;
+            grid-auto-rows: minmax(150px, auto);
+            grid-gap: 10px;
+            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+        }
+        main > img{ 
+            width: 100%; 
+            border: 2px solid fuchsia;
+        }
+    </style>
 </head>
 <body>
-<h1>People Selling Mirrors</h1>
+<div class="wrapper">
+    <header>
+        <a href="mailto:contact@maxrodrigo.com">[ ✉ submit ✌ report]</a>
+        <h1>People Selling Mirrors</h1>
+    </header>
+    <main></main>
+</div>
+<script charset="utf-8">
+    function loadJSON(file, callback) {
+      var xobj = new XMLHttpRequest();
+      xobj.overrideMimeType("application/json");
+      xobj.open('GET', file, true);
+      xobj.onreadystatechange = function () {
+        if (xobj.readyState == 4 && xobj.status == "200") {
+          callback(JSON.parse(xobj.responseText));
+        }
+      };
+      xobj.send(null);
+    }
+
+    loadJSON("./images.json", function(json) {
+        json.images.forEach( function(i) {
+          var img = new Image();
+          img.src = i;
+          document.getElementsByTagName("main")[0].appendChild(img);
+        });
+    });
+</script>
 </body>
 </html>
