Fix submit/report link

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <body>
 <div class="wrapper">
     <header>
-        <a href="mailto:contact@maxrodrigo.com">[ ✉ submit ✌ report]</a>
+        <a href="https://github.com/maxrodrigo/peoplesellingmirrors.com/issues/new">[submit/report]</a>
         <h1>People Selling Mirrors</h1>
     </header>
     <main></main>
