--- a/index.html
+++ b/index.html
@@ -2,7 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>People Selling Mirrors</title>
+    <title>People Selling Mirrors | srorriM gnilleS elpoeP</title>
+
+    <!-- Primary Meta Tags -->
+    <meta name="title" content="People Selling Mirrors | srorriM gnilleS elpoeP">
+    <meta name="description" content="A list of pictures of pictures of mirrors, pictures of mirrors pictures inside mirrors.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.peoplesellingmirrors.com/">
+    <meta property="og:title" content="People Selling Mirrors | srorriM gnilleS elpoeP">
+    <meta property="og:description" content="A list of pictures of pictures of mirrors, pictures of mirrors pictures inside mirrors.">
+    <meta property="og:image" content="./images/91c04174b4d62154511d58b48ddaeded.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:url" content="https://www.peoplesellingmirrors.com/">
+    <meta property="twitter:title" content="People Selling Mirrors | srorriM gnilleS elpoeP">
+    <meta property="twitter:description" content="A list of pictures of pictures of mirrors, pictures of mirrors pictures inside mirrors.">
+    <meta property="twitter:card" content="./images/91c04174b4d62154511d58b48ddaeded.jpg">
+    <meta property="twitter:image" content="./images/91c04174b4d62154511d58b48ddaeded.jpg">
+
     <style type="text/css" media="screen">
         *,
         *:before,
