--- a/index.html
+++ b/index.html
@@ -68,7 +68,6 @@
       };
       xobj.send(null);
     }
-
     loadJSON("./images.json", function(json) {
         json.images.forEach( function(i) {
           var img = new Image();
@@ -76,6 +75,18 @@
           document.getElementsByTagName("main")[0].appendChild(img);
         });
     });
+
+    (function(f, a, t, h, o, m){
+        a[h]=a[h]||function(){
+            (a[h].q=a[h].q||[]).push(arguments)
+        };
+        o=f.createElement('script'),
+        m=f.getElementsByTagName('script')[0];
+        o.async=1; o.src=t; o.id='fathom-script';
+        m.parentNode.insertBefore(o,m)
+    })(document, window, '//34.207.164.27/tracker.js', 'fathom');
+    fathom('set', 'siteId', 'KCSSH');
+    fathom('trackPageview');
 </script>
 </body>
 </html>
