--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>People Selling Mirrors | srorriM gnilleS elpoeP</title>
 
     <!-- Primary Meta Tags -->
