Update analytics URL

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         m=f.getElementsByTagName('script')[0];
         o.async=1; o.src=t; o.id='fathom-script';
         m.parentNode.insertBefore(o,m)
-    })(document, window, 'http://34.207.164.27:9000/tracker.js', 'fathom');
+    })(document, window, 'http://stats.pw:9000/tracker.js', 'fathom');
     fathom('set', 'siteId', 'KCSSH');
     fathom('trackPageview');
 </script>
