--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         }
         header{
             display: grid;
-            grid-template-columns: 1fr 1fr;
+            grid-template-columns: auto auto;
             align-items:baseline;
         }
         nav{
@@ -55,7 +55,7 @@
             display: grid;
             grid-auto-rows: minmax(150px, auto);
             grid-gap: 10px;
-            grid-template-columns: repeat(3, 1fr);
+            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
         }
         main > img{ 
             width: 100%; 
@@ -68,13 +68,10 @@
             text-align:center;
             display:inline-block;
         }
+        a.submit-report{ margin-left:1em; }
 
         @media only screen and (max-width: 768px) {
-            header { 
-                grid-template-columns: 1fr;
-                padding-bottom: 1em;
-            }
-            nav { justify-self: auto; }
+            a.columns-selector{ display:none; }
         }
     </style>
 </head>
@@ -83,11 +80,10 @@
     <header>
         <h1>People Selling Mirrors</h1>
         <nav>
-            <a href="#" data-columns="3" class="columns-selector">❚❚❚</a>
-            <a href="#" data-columns="2" class="columns-selector">❚❚</a>
-            <a href="#" data-columns="1" class="columns-selector">❚</a>
-            ●
-            <a href="https://github.com/maxrodrigo/peoplesellingmirrors.com/issues/new">[submit/report]</a>
+            <a href="#" data-columns="1" class="columns-selector" alt="one-column">❚</a>
+            <a href="#" data-columns="2" class="columns-selector" alt="two columns">❚❚</a>
+            <a href="#" data-columns="auto" class="columns-selector" alt="automatic">❚❚❚</a>
+            <a href="https://github.com/maxrodrigo/peoplesellingmirrors.com/issues/new" class="submit-report">[submit | report]</a>
         </nav>
     </header>
     <main></main>
@@ -116,7 +112,12 @@
         item.addEventListener('click', function(e) {
             e.preventDefault();
             var columns = item.getAttribute("data-columns");
-            document.getElementsByTagName("main")[0].style.gridTemplateColumns = "repeat("+columns+", 1fr)";
+            if(!isNaN(columns)){
+                var columns_prop = "repeat("+columns+", 1fr)";
+            }else{
+                var columns_prop = "repeat(auto-fill, minmax(250px, 1fr))";
+            }
+            document.getElementsByTagName("main")[0].style.gridTemplateColumns = columns_prop;
         });
     });
 
