Add comments header

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
         </nav>
     </header>
     <main></main>
+    <h2>Comments</h2>
     <div id="commento"></div>
 </div>
 <script charset="utf-8">
